@@ -1254,6 +1254,7 @@ Kyle VanderBeek
 Andrew Vant
 Atul Varma
 Dmitry Vasiliev
+Sebastian Ortiz Vasquez
 Alexandre Vassalotti
 Nadeem Vawda
 Frank Vercruesse
